src/objects/Harvest_Invoice_Category__c.object
<CustomObject>
    <fields>
        <fullName>Created_At__c</fullName>
        <label>Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Harvest_ID__c</fullName>
        <externalId>true</externalId>
        <label>Harvest ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Updated_At__c</fullName>
        <label>Updated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Use_As_Expense__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use As Expense</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_As_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use As Service</label>
        <type>Checkbox</type>
    </fields>
    <label>Harvest Invoice Category</label>
    <nameField>
        <label>Harvest Invoice Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Harvest Invoice Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>